# twuiq_proj

./: .gitignore  StoS.py
frontend/: .gitignore  FRONTEND_FILE_BY_FILE.md  (+6 more)
twuiq_proj/Geo_Cortex/Tourist_Assistant-main/: Docs.txt  Qs.txt  README.md  main.py  pyproject.toml
twuiq_proj/Geo_Cortex/Tourist_Assistant-main/Data/: cairo_restaurants_cleaned.csv
twuiq_proj/Geo_Cortex/Tourist_Assistant-main/Documentation/: api_links.txt  description.docx  test.txt
twuiq_proj/Geo_Cortex/Tourist_Assistant-main/Documentation/backlog/: Rahal 1e833a9aa4d780e4893afbe67369b0aa.csv
twuiq_proj/Geo_Cortex/Tourist_Assistant-main/Forntend/: kepler.gl.html  style.css  tovisits.html
twuiq_proj/Geo_Cortex/Tourist_Assistant-main/Notebooks/: Rag2.ipynb  data_cleaning.ipynb
twuiq_proj/Geo_Cortex/Tourist_Assistant-main/Notebooks/Rules_final_vectorstore/: index.pkl
twuiq_proj/Geo_Cortex/Tourist_Assistant-main/Notebooks/brochure_final_vectorstore/: index.pkl
twuiq_proj/Geo_Cortex/Tourist_Assistant-main/Notebooks/faiss_index/: index.pkl
twuiq_proj/Geo_Cortex/Tourist_Assistant-main/Notebooks/faiss_index_egypt_brochure/: index.faiss
twuiq_proj/Geo_Cortex/Tourist_Assistant-main/Notebooks/faiss_index_rules_egypt/: index.faiss
twuiq_proj/Geo_Cortex/Tourist_Assistant-main/Notebooks/faiss_index_with_pdf/: index.faiss  index.pkl
twuiq_proj/Geo_Cortex/Tourist_Assistant-main/static/js/: base.js
twuiq_proj/Geo_Cortex/Tourist_Assistant-main/templates/: login.html  navbar.html  register.html  tovisit.html
twuiq_proj/Geo_Cortex/Tourist_Assistant-main/to_visit_app/: Dockerfile  main.py
(+208 files in other folders)
