[project]
name = "tourist-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.2",
    "bs4>=0.0.2",
    "faiss-cpu>=1.11.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.16",
    "langchain-text-splitters>=0.3.8",
    "langchain-unstructured>=0.1.6",
    "llama-index>=0.12.35",
    "ollama>=0.4.8",
    "pydeck>=0.9.1",
    "pypdf>=5.4.0",
    "sentence-transformers>=4.1.0",
]
